# distffmpeg

./: .gitignore  Makefile  docker-compose.yml  flake.nix  package.yaml  values.yaml
.github/workflows/: publish.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  minio.rs  models.rs  routes.rs  state.rs  ws.rs
dashboard/: index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.vue
dashboard/src/assets/: index.css
dashboard/src/components/: JobList.vue  UploadForm.vue
dashboard/src/components/ui/badge/: Badge.vue
dashboard/src/components/ui/button/: Button.vue
dashboard/src/components/ui/label/: Label.vue
dashboard/src/components/ui/progress/: Progress.vue
dashboard/src/components/ui/select/: Select.vue  SelectContent.vue  SelectItem.vue  SelectTrigger.vue  SelectValue.vue
dashboard/src/components/ui/slider/: Slider.vue
minio-init/: init.sh
templates/: stack.yaml  worker.yaml
worker/: Cargo.toml  Dockerfile
worker/src/: executor.rs  main.rs
