[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ffmpeg-executor"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
colonyos = "1.0.5"
hostname = "0.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
